# breeze

./: .dockerignore  .env.dev  .env.dev.example  .env.example  .env.test  .gitignore  .gitleaks.toml  .trivyignore  .trivyignore.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Caddyfile.dev  README.md  SECURITY.md  UPGRADING.md  breeze-threat-model.md  docker-compose.caddy.yml  docker-compose.dev.yml  docker-compose.doc-verify.yml  docker-compose.monitoring.yml  docker-compose.override.clientai.yml  docker-compose.override.yml  docker-compose.override.yml.billing  docker-compose.override.yml.ci  docker-compose.override.yml.dev  docker-compose.override.yml.ghcr  docker-compose.override.yml.local-build  docker-compose.override.yml.worktree  docker-compose.test.yml  docker-compose.yml  oauth-mcp-threat-model.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  security_best_practices_report.md  test-crud-buttons.py  test-crud-click.py  tsconfig.json  (+1 more)
.claude/: settings.example.json
.githooks/: README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent/: .golangci.yml  Makefile  agent.yaml  (+4 more)
apps/helper/src-tauri/: Cargo.toml  tauri.conf.json
apps/helper/src-tauri/.cargo/: audit.toml
apps/helper/src-tauri/capabilities/: default.json
apps/helper/src-tauri/icons/: icon.icns
apps/helper/src-tauri/src/: lib.rs  main.rs
apps/helper/src-tauri/src/ipc/: client.rs  desktop.rs  envelope.rs  mod.rs  token.rs  transport.rs
apps/viewer/src-tauri/: Cargo.toml  tauri.conf.json
apps/viewer/src-tauri/.cargo/: audit.toml
apps/viewer/src-tauri/capabilities/: default.json
apps/viewer/src-tauri/src/: lib.rs  main.rs
(+6525 files in other folders)
