[package]
name = "breeze-helper"
version = "0.1.0"
edition = "2021"
description = "Breeze RMM Helper - AI-powered IT assistant"

[lib]
name = "breeze_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["sync", "net", "io-util", "time", "rt", "macros"] }
futures-util = "0.3"
whoami = "2"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
